Modifications in base.html

--- a/zunaisha/templates/base.html
+++ b/zunaisha/templates/base.html
@@ -58,7 +58,7 @@
         }
 
         .main-logo {
-            max-width: 200px;
+            max-width: 300px;
             height: auto;
             display: block;
             transition: transform 0.3s ease, box-shadow 0.3s ease;
@@ -403,7 +403,7 @@
         <!-- Logo Header -->
         <div class="logo-header">
             <a href="{% url 'home' %}"> {# Link logo to homepage #}
-                <img src="{% static 'wlogo.jpeg' %}" alt="Your Company Logo" class="main-logo">
+                <img src="{% static 'wlogo.png' %}" alt="Your Company Logo" class="main-logo">
             </a>
         </div>
 
@@ -561,18 +561,15 @@
             <div class="footer-col">
                 <h4>FIND US <span class="icon-pin">📍</span></h4>
                 <p><strong>Address:</strong><br>
-                    A/B/C, Center Shop No#27 farshi bazar infront of UK Kashmiri center dhatti azam cloth market, Lahore</p>
+                    ABC, Center Shop No#27 farshi Bazar Uposit UK Kashmiri Center Gate Azam Cloth Market, Lahore</p>
                 <p>FOR CUSTOMER SERVICES : 11:00 AM TO 9:00 PM<br>
                     (MONDAY TO SATURDAY)<br>
                     (+92) 321 0835000</p>
                 <p><strong>For Online Order Inquiries:</strong><br>
                     (Pret & Unstitch)<br>
                     Call/WhatsApp: (+92) 321 0835000<br>
-                    Email: zunaishaclothing@gmail.com</p> {# Updated email #}
-                <p><strong>For Bridal Studio Appointments:</strong><br>
-                    (+92) 321 0835000<br>
-                    <strong>For Bridal Inquiries Only:</strong><br>
-                    (+92) 321 0835000</p>
+                    Email: zunaishaclothing@gmail.com.com</p> 
+                
 
                 <div class="container text-center social-icons">
                     <div class="d-flex justify-content-center gap-3">
@@ -600,8 +597,7 @@
                 <h4>STORE HOURS</h4>
                 <p><strong>MONDAY – SATURDAY:</strong><br>
                     11:00 AM – 10:00 PM</p>
-                <p><strong>SUNDAY:</strong><br>
-                    2:00 PM – 9:00 PM</p>
+                
             </div>
 
             <div class="footer-col">
