--- a/templates/base.html
+++ b/templates/base.html
@@ -55,8 +55,8 @@
         }
 
         .main-logo {
-            max-width: 200px;
-            height: auto;
+            max-width: 400px;
+            height: 400px;
             display: block;
             transition: transform 0.3s ease, box-shadow 0.3s ease;
             border-radius: 5px;
