--- a/templates/base.html
+++ b/templates/base.html
@@ -425,9 +425,9 @@
         </div>
         <div class="logo-header">
             <a href="{% url 'store:index' %}"> {# Link logo to homepage #}
-                <img src="{% static 'wlogo.png' %}" alt="Your Company Logo" class="main-logo">
+                <img src="{% static 'wqlogo.png' %}" alt="Your Company Logo" class="main-logo">
             </a>
-            <span class="site-title">ZUNAISHA BY ZOHAN ARTS</span> {# Updated text #}
+            <span class="site-title">ZUNAISHA </span> {# Updated text #}
         </div>
 
         <nav class="navbar navbar-expand-lg navbar-light bg-white border-top border-bottom">
@@ -587,7 +587,7 @@
             <div class="footer-col">
                 <h4>FIND US <span class="icon-pin">📍</span></h4>
                 <p><strong>Address:</strong><br>
-                    ABC, Center Shop No#27 Farshi bazar uposit UK Kashmiri center gate Azam cloth market, Lahore</p>
+                    ABC, Center Shop No#27 Farshi bazar uposit UK center Kashmiri  gate Azam cloth market, Lahore</p>
                 <p>FOR CUSTOMER SERVICES : 11:00 AM TO 9:00 PM<br>
                     (MONDAY TO SATURDAY)<br>
                     (+92) 321 0835000</p>
@@ -597,7 +597,16 @@
                     Email: zunaishaclothing@gmail.com</p>
                 
 
-                <div class="container text-center social-icons">
+              
+
+            </div>
+
+            <div class="footer-col">
+                <h4>STORE HOURS</h4>
+                <p><strong>MONDAY – SATURDAY:</strong><br>
+                    11:00 AM – 10:00 PM</p>
+
+                      <div class="container text-center social-icons">
                     <div class="d-flex justify-content-center gap-3">
                         <a href="https://www.facebook.com/share/16t5RYifVW/" class="text-dark fs-3">
                             <i class="bi bi-facebook"></i>
@@ -614,13 +623,6 @@
                         </a>
                     </div>
                 </div>
-
-            </div>
-
-            <div class="footer-col">
-                <h4>STORE HOURS</h4>
-                <p><strong>MONDAY – SATURDAY:</strong><br>
-                    11:00 AM – 10:00 PM</p>
                
             </div>
 
