--- a/templates/base.html
+++ b/templates/base.html
@@ -438,7 +438,7 @@
             <a href="{% url 'store:index' %}"> {# Link logo to homepage #}
                 <img src="{% static 'wqlogo.png' %}" alt="Your Company Logo" class="main-logo">
             </a>
-            <span class="site-title">ZUNAISHA BY ZOHAN ARTS</span> {# Updated text #}
+            <span class="site-title">Znaisha by zohan arts</span> {# Updated text #}
         </div>
 
         <nav class="navbar navbar-expand-lg navbar-light bg-white border-top border-bottom">
